[package]
author = "Pravin Paratey <pravin@paratey.com>"
edition = "2021"
name = "simple-win32-window"
version = "0.1.0"

[dependencies.windows]
features = [
  "alloc",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
]
version = "0.37.0"
